--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "@radix-ui/react-slot": "1.2.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "lucide-react": "^0.482.0",
-    "next": "15.2.3",
+    "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
@@ -27,7 +27,7 @@
     "@types/react-dom": "19.0.4",
     "eslint": "9.22.0",
     "eslint-config-next": "15.2.3",
-    "tailwindcss": "4.0.14",
-    "typescript": "5.8.2"
+    "tailwindcss": "4.1.3",
+    "typescript": "5.8.3"
   }
 }
